--- a/style.css
+++ b/style.css
@@ -1,61 +1,55 @@
 @import url('https://fonts.googleapis.com/css?family=Rubik,sans-serif:400,500,700');
 
-
-/*---Media Queries --*/
-@media (max-width: 992px) {
-
-}
-@media (max-width: 768px) {
-
-}
-@media (max-width: 576px) {
-
-}
-
-/*--- Fixed Background Image --*/
-figure {
-  position: relative;
-  width: 100%;
-  height: 60%;
-  margin: 0!important;
-}
-.fixed-wrap {
-  clip: rect(0, auto, auto, 0);
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-#fixed {
-  background-image: url('Images/h2-background-img-3.jpg');
-  position: fixed;
-  display: block;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
+body {
+  background-image: url("Images/h2-background-img-3.jpg");
+  background-repeat: no-repeat;
   background-position: center center;
-  -webkit-transform: translateZ(0);
-          transform: translateZ(0);
-  will-change: transform;
+  background-size: cover;
+  filter: brightness(90%);
+  background-color: black;
+  color:#ffffff;
 }
+
+
+.logo-img {
+ 
+  margin-top:10px;
+  margin-bottom: 10px;
+  margin-left:5px;
+  transform: rotate(180deg);
+  animation: logo-spin 3s ease ;
+  height: 50px;
+  width:50px;
+  
+}
+
+@keyframes logo-spin {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360eg);
+  }
+}
+
+.logo-img:hover {
+  animation: none;
+}
+
+
 /* Navigation Bar Styles */
 .custom-navbar {
   background-color: transparent !important;
   box-shadow: none;  
+
 }
 
-.custom-navbar .navbar-brand img.logo-img {
-  max-height: 50px;
-}
 
 .navbar-nav li a{
   
   font-size: 1rem;
   font-weight: 500;
- 
+
   letter-spacing: 1.2px;
   transition: color 0.3s ease;
  
@@ -65,8 +59,9 @@ figure {
  
 }
 .navbar-nav .nav-iterm .nav-link:hover {
-  color: rgb(160, 155, 155); 
-  /*border-bottom: 2px solid rgb(255, 0, 0, 0.2) ;*/
+  color: rgb(160, 155, 155);  
+  border-image: linear-gradient(to left, rgb(160, 155, 155), transparent) 4 1;
+  /* enlarge the element minorly! */
   
   
 }
@@ -77,22 +72,28 @@ figure {
 
 .nav-iterm i:hover{
   color: rgb(160, 155, 155); 
+  
 }
 
 #searchForm {
   display: none;
   margin-left: 10px;
   border-radius: 25px;
+ 
+}
+#searchForm.form-control {
+  color: rgb(0, 0, 0,0.5);
 }
 
 #searchIcon {
   cursor: pointer;
-  color: #ffffff;
+  color: rgb(255, 255, 255);
   margin: 0 10px;
 }
 
 #searchIcon:hover {
   color: rgb(160, 155, 155);
+   
 }
 
 
@@ -126,7 +127,106 @@ figure {
   .navbar-toggler .icon {
     display: inline-block;
     transition: transform 0.3s ease;
+   
   }
   .navbar-toggler.clicked .icon {
     animation: rotate360 0.5s;
   }
+
+  
+
+.col-lg-6 p{
+    padding-left:40px;
+    padding-right:40px;
+  }
+  .col-lg-6 h2{
+   
+    padding-left:40px;
+    padding-right:40px;
+  }
+  .col-lg-6 h3{
+    padding-left:40px;
+    padding-right:40px;
+  }
+ .btn-danger{
+    margin-left:40px;
+ }
+ .carousel-item h2 {
+  text-align: center;
+  padding:40px 0;
+ }
+.carousel-item button{
+  padding:10px 20px ;
+  font-size: large;
+  
+}
+ .carousel-item p {
+  text-align: center;
+  padding-left: 40px;
+  padding-right: 40px;
+  margin-left:100px;
+  margin-right:100px;
+ }
+ .carousel-inner {
+  background-color: rgb(0, 0, 0,0.3);
+  text-align: center;
+}
+.carousel-inner img{
+  width:100%;
+  height:100%;
+}
+.carousel-caption{
+  position:absolute;
+  top:60%;
+  transform:translateY(-60%)
+}
+.carousel-caption h1{
+  font-size: 260%;
+  text-shadow: 1px 1px 10px #000;
+  
+}
+
+.robo-cave{
+  background-image: url(Images/robo-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;  
+
+}
+.robo-cave::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.8); /* Adjust the opacity (last value) to your preference */
+}
+.last-img {
+  background-image: url("Images/h2-background-img-3.jpg");
+
+  background-repeat:no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: relative;  
+  
+
+}
+.last-img img{
+  padding:100px;
+}
+
+.page-footer{
+  background-color: rgb(0, 0, 0,0.3);
+}
+.sticky-button {
+  position:sticky;
+  bottom: 20px;
+  right: 20px;
+  text-align: right;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin:10px
+}
